# sd-get-it-done

./: .gitignore  .mcp.json  CLAUDE.md  README.md  pyproject.toml  render.yaml  requirements-api.txt  requirements.txt
.github/workflows/: refresh.yml
api/: main.py  mcp_server.py  models.py  queries.py
dashboard/: app.py
data/aggregated/: case_origin.parquet  day_hour_patterns.parquet  monthly_trends.parquet  resolution_by_district.parquet  response_by_neighborhood.parquet  top_problem_types.parquet  volume_by_service_monthly.parquet  yearly_volume.parquet
pipeline/: build.py  ingest.py  transform.py  validate.py
